--- a/02_networking/02_nad_ipam.yaml
+++ b/02_networking/02_nad_ipam.yaml
@@ -78,22 +78,22 @@ spec:
       }
     }
 ---
-#apiVersion: k8s.cni.cncf.io/v1
-#kind: NetworkAttachmentDefinition
-#metadata:
-#  name: external
-#  namespace: openstack
-#spec:
-#  config: |
-#    {
-#      "cniVersion": "0.3.1",
-#      "name": "external",
-#      "type": "macvlan",
-#      "master": "enp3s0",
-#      "ipam": {
-#        "type": "whereabouts",
-#        "range": "192.168.123.0/24",
-#        "range_start": "192.168.123.60",
-#        "range_end": "192.168.123.110"
-#        }
-#      }
+apiVersion: k8s.cni.cncf.io/v1
+kind: NetworkAttachmentDefinition
+metadata:
+  name: external
+  namespace: openstack
+spec:
+  config: |
+    {
+      "cniVersion": "0.3.1",
+      "name": "external",
+      "type": "macvlan",
+      "master": "enp3s0",
+      "ipam": {
+        "type": "whereabouts",
+        "range": "10.0.0.0/24",
+        "range_start": "10.0.0.60",
+        "range_end": "10.0.0.110"
+        }
+      }
