--- a/04_storage/01_storage.yaml
+++ b/04_storage/01_storage.yaml
@@ -9,7 +9,7 @@ reclaimPolicy: Delete
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv1
+  name: nfs-pv1
 spec:
   accessModes:
   - ReadWriteOnce
@@ -17,7 +17,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv1
+    path: /nfs/nfs-pv1
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv2
+  name: nfs-pv2
 spec:
   accessModes:
   - ReadWriteOnce
@@ -34,7 +34,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv2
+    path: /nfs/nfs-pv2
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -43,7 +43,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv3
+  name: nfs-pv3
 spec:
   accessModes:
   - ReadWriteOnce
@@ -51,7 +51,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv3
+    path: /nfs/nfs-pv3
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -60,7 +60,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv4
+  name: nfs-pv4
 spec:
   accessModes:
   - ReadWriteOnce
@@ -68,7 +68,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv4
+    path: /nfs/nfs-pv4
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -77,7 +77,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv5
+  name: nfs-pv5
 spec:
   accessModes:
   - ReadWriteOnce
@@ -85,7 +85,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv5
+    path: /nfs/nfs-pv5
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -94,7 +94,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv6
+  name: nfs-pv6
 spec:
   accessModes:
   - ReadWriteOnce
@@ -102,7 +102,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv6
+    path: /nfs/nfs-pv6
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -111,7 +111,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv7
+  name: nfs-pv7
 spec:
   accessModes:
   - ReadWriteOnce
@@ -119,7 +119,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv7
+    path: /nfs/nfs-pv7
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -128,7 +128,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv8
+  name: nfs-pv8
 spec:
   accessModes:
   - ReadWriteOnce
@@ -136,7 +136,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv8
+    path: /nfs/nfs-pv8
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -145,7 +145,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv9
+  name: nfs-pv9
 spec:
   accessModes:
   - ReadWriteOnce
@@ -153,7 +153,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv9
+    path: /nfs/nfs-pv9
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
@@ -162,7 +162,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv10
+  name: nfs-pv10
 spec:
   accessModes:
   - ReadWriteOnce
@@ -170,7 +170,7 @@ spec:
   capacity:
     storage: 100Gi
   nfs:
-    path: /nfs/pv10
+    path: /nfs/nfs-pv10
     server: 172.18.0.5
   persistentVolumeReclaimPolicy: Delete
   storageClassName: nfs
