--- a/05_osp_ctlplane/02_osp_ctlplane.yaml
+++ b/05_osp_ctlplane/02_osp_ctlplane.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openstack
 spec:
   secret: osp-secret
-  storageClass: ocs-storagecluster-ceph-rbd
+  storageClass: nfs
   dns:
     template:
       override:
